--- a/src/industries/restaurant/styles/restaurant.scss
+++ b/src/industries/restaurant/styles/restaurant.scss
@@ -178,6 +178,7 @@ $xl: 1280px;
   width: 100%;
   height: 100vh;
   background: $dark;
+  color: #fff;
   z-index: 1100;
   display: flex;
   flex-direction: column;
