--- a/src/industries/school/styles/school.scss
+++ b/src/industries/school/styles/school.scss
@@ -190,6 +190,7 @@ $xl: 1280px;
   width: 100%;
   height: 100vh;
   background: $dark;
+  color: #fff;
   z-index: 1100;
   display: flex;
   flex-direction: column;
